# neurorm

./: README.md  pyproject.toml
src/neurorm/: __init__.py  freesurfer.py
tests/: test_freesurfer.py
